<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/tituloContacto"
        android:layout_width="wrap_content"
        android:textColor="#222222"
        android:textSize="36sp"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listacontactos" />

    <TextView
        android:text="@string/tituloDireccion"
        android:layout_width="wrap_content"
        android:textColor="#222222"
        android:textSize="36sp"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <TextView
        android:text="@string/direccion"
        android:layout_width="wrap_content"
        android:textColor="#222222"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>
