<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">





    <TextView
        android:text="@string/tituloRegistro"
        android:layout_width="wrap_content"
        android:textColor="#222222"
        android:textSize="36sp"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:text="@string/textoExplicacion1"
        android:layout_width="wrap_content"
        android:textColor="#222222"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginBottom="5dp"
        />
     <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
         android:inputType="textCapWords"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        android:hint="@string/nombre"
        android:layout_marginBottom="5dp"
        />
    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        android:inputType="phone"
        android:hint="@string/telefono"
        android:layout_marginBottom="5dp"
        />
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="onToRegistro2"
        android:src="@drawable/ic_action_forward"
        />

</LinearLayout>
