<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/tituloRegistro2"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="36sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:text="@string/textoExplicacion2"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/nombreUsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="sans-serif-light"
                android:inputType="textCapWords"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="20sp"
                android:hint="@string/nombreUsuario"
                android:layout_marginBottom="5dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:id="@+id/button"
                android:fontFamily="sans-serif-light"
                android:background="#558800"
                android:onClick="onRegister"
                android:layout_gravity="center_horizontal" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="onToRegistro1"
                android:src="@drawable/ic_action_back"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>
