<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <ScrollView
        android:id="@+id/layoutGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/tituloAtencion"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="36sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:text="@string/atencion_gps1"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>
            <include layout="@layout/row_contact"></include>

            <TextView
                android:text="@string/atencion_gps2"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <TextView
                android:text="@string/direccion"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="30sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/layoutBatery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:text="@string/tituloAtencion"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="36sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/texto"
                android:layout_width="wrap_content"
                android:textColor="#222222"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
